Fix colors in dark mode

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -12,6 +12,7 @@
     --red: #f05230;
     --darkgrey: #161b1d;
     --midgrey: #425157;
+    --grey: #888888;
     --lightgrey: #a8b7bd;
     --whitegrey: #e2e7e9;
     --pink: #fa3a57;
